--- a/vite-project/.eslintrc.json
+++ b/vite-project/.eslintrc.json
@@ -2,7 +2,8 @@
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
-    "plugin:react-hooks/recommended"
+    "plugin:react-hooks/recommended",
+    "eslint-config-prettier"
   ],
   "plugins": ["react", "react-hooks"],
   "parserOptions": {
