--- a/vite-project/.eslintrc.json
+++ b/vite-project/.eslintrc.json
@@ -18,6 +18,8 @@
     "es2020": true
   },
   "rules": {
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "react/jsx-uses-react": "off"
+   
   }
 }
